conf/radar/ingestion/http_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radar-ingestion-service
spec:
  type: LoadBalancer
  ports:
    - name: httpinput
      protocol: TCP
      port: 8070
      targetPort: 8070
  selector:
    app: radar-ingestion-http
