conf/radar/ingestion/http_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locations-ingestion-ingress
spec:
  rules:
    - host: ingestion.punchplatform.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: locations-ingestion-service
                port:
                  number: 8070
  ingressClassName : nginx
